--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Sant’Ana Blog
+title: Gideão Santana
 
-description: > 
+description: >
   Sant'Ana personal blog whith article about programming 
   callengens, system adminstration and privacy on the web.
 
