Update blog title

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-site: Sidey
+site: Gideao
 url: #yoururl
-title: Sidey
-description: Simple and minimalistic jekyll blogging theme.
+title: Gideao
+description: Gideao's Personal Blog
 twitter:
   username: #yourusername
   card: summary
